--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -8,4 +8,12 @@
       <view class="weui-vcode-btn" bindtap='getItem'>查询</view>
     </view>
   </view>
+  <view class='weui-cell weui-cell_vcode'>
+    <view class='weui-cell__bd'>
+      <input class="weui-input" type="text" bindinput="onInput" placeholder="请输入游戏人物名称进行查询" />
+    </view>
+    <view class="weui-cell__ft">
+      <view class="weui-vcode-btn" bindtap='getCharacter'>查询</view>
+    </view>
+  </view>
 </view>
